# caprice32wx

./: CMakeLists.txt  ChangeLog  Makefile.am  README.md  TODO  autogen.sh  caprice32.conf  caprice32wx  caprice32wx.conf  caprice32wx.conf.in  config.h.in  configure.ac
src/: Makefile.am
src/aop/: Makefile.am  alsaAudioPlugin.h
src/asm/: Makefile.am
src/cli/: Makefile.am
src/cli/.deps/: libcapricecli_a-cparser.Po  libcapricecli_a-cparser_caprice.Po  libcapricecli_a-cparser_fsm.Po  libcapricecli_a-cparser_io_unix.Po  libcapricecli_a-cparser_line.Po  libcapricecli_a-cparser_token.Po  libcapricecli_a-cparser_token_tbl.Po  libcapricecli_a-cparser_tree.Po
src/core/: CMakeLists.txt  Makefile.am  config_manager.cpp  dsk.cpp  emulator.cpp  input.cpp  render.cpp
src/gui/: CMakeLists.txt  CapriceApp.cpp  CapriceApp.h  CapriceIDE.cpp  CapriceInputSettingsImpl.cpp  CapriceRegistersDialogImpl.cpp  CapriceUI.cpp  CapriceUI.h  CapriceWindowImpl.cpp  Makefile.am  MemoryImpl.cpp  WXEmulator.cpp  ui.fbp  ui.fbp.bak
src/gui/IDE/: Makefile.am
src/gui/IDE/include/wx/stedit/: setup0.h  stedefs.h  stedit.h  stedlgs.h  stefindr.h  steframe.h  stelangs.h  stenoteb.h  steopts.h  steprefs.h  steshell.h  stesplit.h  stestyls.h  stetree.h
src/gui/IDE/stedit/: precomp.h  stedit.cpp  stedlgs.cpp  stedlgs_wdr.cpp  steexprt.cpp  stefindr.cpp  steframe.cpp  stelangs.cpp  stemenum.cpp  stenoteb.cpp  steopts.cpp  steprefs.cpp  steprint.cpp  steshell.cpp  stesplit.cpp  stestyls.cpp  stetree.cpp  wxext.cpp  wxext.h
src/gui_be/: CMakeLists.txt
src/misc/: Makefile.am  zip.cpp  zip.h
src/snamp/: CMakeLists.txt  Makefile.am
src/snamp/.deps/: libcapricesnamp_a-main.Po
