libcaprice32wxasm_a_CPPFLAGS = -O2 -funroll-loops -ffast-math -fomit-frame-pointer -fno-strength-reduce -finline-functions -s  

noinst_LIBRARIES = libcaprice32wxasm.a

libcaprice32wxasm_a_CPPFLAGS = -I@top_srcdir@/src $(SDL_CFLAGS) $(WX_CFLAGS)

libcaprice32wxasm_a_SOURCES = \
CapASM.cpp  CapASM.h

